[package]
name = "ble-ws-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
prost = "0.8.0"
serde = { version = "1.0.127", features = ["derive"] }
thiserror = "1.0.26"
tonic = "0.5.0"
uuid = "0.8.2"

[build-dependencies]
prost-build = "0.8.0"
tonic-build = "0.5.1"
